--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crochet Híbrido</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body { margin: 0; padding: 0; overflow: hidden; background-color: #f3f4f6; }
-      #root { height: 100vh; width: 100vw; }
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #f3f4f6;
+      }
+      #root {
+        height: 100vh;
+        width: 100vw;
+      }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "three": "https://esm.sh/three@^0.182.0"
-  }
-}
-</script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root"></div>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
